--- a/frontEnd/app/build.gradle
+++ b/frontEnd/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
 
     //Room DB 라이브러리
     implementation "androidx.room:room-runtime:2.5.1"
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
