--- a/frontEnd/app/src/main/AndroidManifest.xml
+++ b/frontEnd/app/src/main/AndroidManifest.xml
@@ -67,6 +67,14 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".QnA"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize|adjustPan">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SearchSelect"
             android:exported="false"
             android:windowSoftInputMode="adjustResize|adjustPan">
@@ -82,6 +90,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
     </application>
 
 
