--- a/frontEnd/app/src/main/AndroidManifest.xml
+++ b/frontEnd/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".SpotList"
+            android:name=".Spot.SpotList"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
